content/posts/7-debugging-argocd/manifests/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
  namespace: dex
spec:
  selector:
    app.kubernetes.io/instance: dex
    app.kubernetes.io/name: dex
  ports:
    - appProtocol: http
      name: http
      port: 80
      protocol: TCP
      targetPort: http
