content/posts/7-debugging-argocd/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
spec:
  rules:
    - host: $ARGO
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  namespace: dex
spec:
  rules:
    - host: $DEX
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: dex
                port:
                  number: 5556
